# azul-plugin-mobsf

./: .dockerignore  Dockerfile  README.md  debian.txt  pipeline-mirror.yaml  pipeline.yaml  pyproject.toml  requirements.txt  requirements_tests.txt  setup.py  tox.ini
.github/workflows/: azul-major-update.yml  docker.yml
azul_plugin_mobsf/: main.py  mobsf.py
tests/unit/: common.py  test_android.py  test_config.py  test_errors.py  test_existing_report.py  test_existing_task.py  test_ios.py
tests/unit/data/: sample.apk  sample.ipa  sample_basic_apk.json  sample_basic_ipa.json
